[tool.poetry]
name = "timesfm_torch_exp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.11.13"

[tool.poetry.extras]
torch = ["torch", "torchvision", "torchaudio"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
